--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.3",
     "kafkajs": "^2.2.4",
-    "pg": "^8.18.0"
+    "multer": "^2.0.2",
+    "pg": "^8.18.0",
+    "xlsx": "^0.18.5"
   }
 }
